Bug 75278 - st_program.c:1099: undefined reference to `ureg_property_gs_invocations'
Summary: st_program.c:1099: undefined reference to `ureg_property_gs_invocations'
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-02-20 19:36 UTC by Vinson Lee
Modified: 2014-02-21 00:46 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-02-20 19:36:16 UTC
mesa: 741782b5948bb3d01d699f062a37513c2e73b076 (master)

$ scons
[...]
build/linux-x86_64-debug/mesa/libmesa.a(st_program.os): In function `st_translate_geometry_program':
src/mesa/state_tracker/st_program.c:1099: undefined reference to `ureg_property_gs_invocations'

86d6b5546b75ac7d5eedc26c14f579a4bfb40406 is the first bad commit
commit 86d6b5546b75ac7d5eedc26c14f579a4bfb40406
Author: Jordan Justen <jordan.l.justen@intel.com>
Date:   Sat Jan 25 12:34:24 2014 -0800

    mesa: initialize gl_geometry_program Invocations field
    
    Signed-off-by: Jordan Justen <jordan.l.justen@intel.com>
    Reviewed-by: Paul Berry <stereotype441@gmail.com>
    Reviewed-by: Anuj Phogat <anuj.phogat@gmail.com>

:040000 040000 3b7acfca89e0b7e9f0d16ff43f04a2186504deaf da18d5749d12e284ee0ebf13908f719cb6657df4 M	src
bisect run success
Comment 1 Jordan Justen 2014-02-21 00:46:27 UTC
Fixed in c97763ca2d740bd44062a81def9a49a03dcc0424


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.